Lab05/demoapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
  labels:
    app: demoapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp-pod
  template:
    metadata:
      labels:
        app: demoapp-pod
    spec:
      imagePullSecrets:
      - name: <SECRET CREATED FOR REGISTRY ACCES>
      containers:
      - name: demoapp-container
        image: <NAME AND TAG OF DEMOAPP CONTAINER>
        ports:
        - containerPort: 80
