Lab05/demoapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
spec:
  rules:
    - host: <PROVIDE FQDN FOR DEMOAPP>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <PROVIDE DEMOAPP SERVICE NAME>
                port:
                  number: 80
